# cuda-oplib

./: .clang-format  .gitignore  CMakeLists.txt  README.md  devLog.md
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  bench_layernorm.cu  bench_rmsnorm.cu  bench_vector_add.cu
bindings/pytorch/: README.md
cmake/: cuda_oplib-config.cmake.in
docs/: architecture.md  operator_template.md  roadmap.md
examples/: CMakeLists.txt
examples/cpp/: layernorm_example.cu  rmsnorm_example.cu  vector_add_example.cu
include/cuda_oplib/: cuda_check.h  layernorm.h  rmsnorm.h  vector_add.h
python/experiments/FlashAttention/: __init__.py  cases.py  compare.py  flashattention.cu  fsattention.cu  fsattention_wrap.cu  log.md  refs.py  registry.py  report.py
python/experiments/RMSnorm/: __init__.py  cases.py  compare.py  fused_add_rmsnorm.cu  refs.py  registry.py  rmsnorm.cu  rmsnorm_wrap.cu
python/experiments/explog/FlashAttention/2026-04-22/: 043019_debug_fp32_float32_cuda.md  043019_main_fp32_float32_cuda.md  045457_debug_fp32_float32_cuda.md  045457_debug_tiny_fp32_float32_cuda.md  045518_debug_tiny_fp32_float32_cuda.md  045753_large_fp32_float32_cuda.md  055744_large_fp32_float32_cuda.md  064406_large_fp32_float32_cuda.md
python/experiments/explog/FlashAttention/2026-04-23/: 024418_large_fp32_float32_cuda.md
python/experiments/explog/FlashAttention/2026-04-26/: 232422_debug_tiny_fp32_float32_cuda.md  232750_debug_fp32_float32_cuda.md
python/experiments/explog/RMSnorm/2026-04-19/: 202837_main_fp32_fused_float32_cuda.md
python/experiments/layernorm/: __init__.py  cases.py  compare.py  layernorm.cu  layernorm.py  layernorm_min_bench.py  layernorm_wrap.cu  refs.py  registry.py  report.py
scripts/: build.sh  run_tests.sh
src/: CMakeLists.txt
src/kernel/: layernorm_half2.cu  rmsnorm_half2.cu
src/operators/: vector_add.cu
src/pydemo/: layernorm.cu  layernorm_half2.cu  layernorm_min_bench.py  layernorm_wrap.cu  naive
src/pydemo/layernorm/: layernorm.py
tests/: CMakeLists.txt
tests/cpp/: test_layernorm.cu  test_rmsnorm.cu  test_vector_add.cu
